--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -1,2 +1,14 @@
 server:
   port: 8080
+spring:
+  cloud:
+    gateway:
+      routes:
+        - id: moviesRoute
+          uri: lb://MOVIE-SERVICE
+          predicates:
+           - Path=/movies/**
+        - id: catalogRoute
+          uri: lb://CATALOG-SERVICE
+          predicates:
+           - Path=/catalog/**
