--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -8,6 +8,10 @@ spring:
           uri: lb://MOVIE-SERVICE
           predicates:
            - Path=/movies/**
+         - id: seriesRoute
+          uri: lb://SERIE-SERVICE
+          predicates:
+           - Path=/series/**
         - id: catalogRoute
           uri: lb://CATALOG-SERVICE
           predicates:
