--- a/gateway-dev.yml
+++ b/gateway-dev.yml
@@ -4,6 +4,10 @@ spring:
   cloud:
     gateway:
       routes:
+        - id: accountRoute
+          uri: http://localhost:8080
+          predicates:
+           - Path=/account/**
         - id: moviesRoute
           uri: lb://MOVIE-SERVICE
           predicates:
